--- a/notebooks/guc1.ipynb
+++ b/notebooks/guc1.ipynb
@@ -115,7 +115,25 @@
     "#\n",
     "# ## Optimierung des Prompts:\n",
     "# Um die Analyse noch präziser zu gestalten, könnten spezifische Fragen zu den Inhalten und \n",
-    "# Erkenntnissen aus den einzelnen Kategorien gestellt werden."
+    "# Erkenntnissen aus den einzelnen Kategorien gestellt werden.\n",
+    "\n",
+    "# Code (Python)\n",
+    "# # Analyzing the provided data\n",
+    "#\n",
+    "# # 1. Column headers of the table\n",
+    "# column_headers = list(data.columns)\n",
+    "#\n",
+    "# # 2. Number of entries in the table\n",
+    "# number_of_entries = len(data)\n",
+    "#\n",
+    "# # 3. Preparing JSON structure\n",
+    "# analysis_json = {\n",
+    "#     \"Datei\": \"220714_RW2_Nord_Status_Quo.ods\",\n",
+    "#     \"1\": column_headers,\n",
+    "#     \"2\": {\"Einträge\": number_of_entries},\n",
+    "# }\n",
+    "#\n",
+    "# analysis_json, number_of_entries"
    ]
   },
   {
