--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -37,11 +37,84 @@
     "\n",
     "Du bist Teil des Teams der \"Hans Sauer Stiftung\" und sollst nun die Ergebnisse verarbeiten.\n",
     "\n",
-    "Extrahiere die Überschrift pro Spalte in der Tabelle und sage \"Bereit\", wenn du bereit bist für eine Aufgabe.\n",
+    "Sage \"Bereit\", wenn du bereit bist für eine Aufgabe.\n",
     "\"\"\"\n",
     "\n",
     "# GPT:\n",
     "# Bereit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guc2_tabelle = \"\"\"\n",
+    "Fokusiere dich bei deiner Analyse darauf, dass dein Ergebnis alle Daten beinhaltet.\n",
+    "Bearbeite dazu folgende Aufgabe Schritt für Schritt und generiere deine fertige Analyse lückenlos im JSON Format mit folgender Struktur:\n",
+    "{\n",
+    "    \"Datei\": <Dateiname>,\n",
+    "    \"1\": [<Überschriften>],\n",
+    "    \"2\": {\"Tupel\": <Anzahl>},\n",
+    "}\n",
+    "1. Extrahiere die Überschrift pro Spalte in der Tabelle und update entsprechend das JSON.\n",
+    "2. Zähle wie viele Einträge, sogenannte Tupel, die Tabelle beinhaltet und update entsprechend das JSON.\n",
+    "\"\"\"\n",
+    "\n",
+    "# GPT:\n",
+    "# {\n",
+    "#     \"Datei\": \"220714_RW2_Nord_Status_Quo.ods\",\n",
+    "#     \"1\": [\n",
+    "#         \"Leitfrage\",\n",
+    "#         \"Leitfrage Nummer\",\n",
+    "#         \"Kategorie\",\n",
+    "#         \"Titel des Beispiels\",\n",
+    "#         \"1) Beschreibe Dein konkretes Beispiel.\",\n",
+    "#         \"2) Was läuft gut oder schlecht?\",\n",
+    "#         \"3) Woran liegt es, dass es so läuft?\",\n",
+    "#         \"Himmelsrichtung\",\n",
+    "#         \"Frühe Kindheit\",\n",
+    "#         \"Kindheit und Jugendalter\",\n",
+    "#         \"Jugend und Erwachsenenalter\",\n",
+    "#         \"Rolle\",\n",
+    "#         \"Rolle (Sonstiges)\",\n",
+    "#         \"Bildungseinrichtung \",\n",
+    "#         \"Alter\",\n",
+    "#         \"Template Nummer\",\n",
+    "#         \"Insight\",\n",
+    "#         \"Insight Code\"\n",
+    "#     ],\n",
+    "#     \"2\": {\n",
+    "#         \"Tupel\": 107\n",
+    "#     }\n",
+    "# }\n",
+    "\n",
+    "\n",
+    "# Code (Python)\n",
+    "# import pandas as pd\n",
+    "# import json\n",
+    "#\n",
+    "# # Laden der ODS-Datei\n",
+    "# file_path = '/mnt/data/220714_RW2_Nord_Status_Quo.ods'\n",
+    "# data = pd.read_excel(file_path, engine='odf')\n",
+    "#\n",
+    "# # Extrahieren der Überschriften\n",
+    "# column_headers = data.columns.tolist()\n",
+    "#\n",
+    "# # Zählen der Einträge (Tupel)\n",
+    "# number_of_tuples = len(data)\n",
+    "#\n",
+    "# # Erstellen des JSON-Objekts\n",
+    "# json_output = {\n",
+    "#     \"Datei\": \"220714_RW2_Nord_Status_Quo.ods\",\n",
+    "#     \"1\": column_headers,\n",
+    "#     \"2\": {\"Tupel\": number_of_tuples}\n",
+    "# }\n",
+    "#\n",
+    "# # Konvertieren des JSON-Objekts in einen String zur Anzeige\n",
+    "# json_string = json.dumps(json_output, ensure_ascii=False, indent=4)\n",
+    "# json_string"
    ]
   },
   {
@@ -151,17 +224,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# IDEE: ChatGPT reviewed HSS Insights anhand der 5 Regeln.\n",
     "guc2_insights_review = \"\"\"\n",
+    "Deine Aufgabe besteht darin sogenannte Insights zu prüfen.\n",
+    "Fokusiere dich bei der Prüfung von Insights auf die folgenden 5 Regeln:\n",
+    "i) Für einen Insight ist ausschließlich der Inhalt einer Zeile (Tupel) in den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\" relevant.\n",
+    "ii) Ein Insight konzentriert sich auf konkrete Herausforderungen und konkrete Chancen.\n",
+    "iii) Es ist wichtig spezifische Details und Ursachen zu benennen, um den Insight aussagekräftig zu gestalten.\n",
+    "iv) Insights müssen wie folgt strukturiert sein: \"<A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <B> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <C>\". <B> und <C> sind optional. \n",
+    "v) Insights werden präzise und prägnant in 20-45 Wörter formuliert.\n",
     "\n",
-    "    <WIP>\n",
+    "Beispiel: Insight für das 4. Tupel: {\n",
+    "    \"4. Tupel\": {\n",
+    "        \"Titel des Beispiels\":\"Zusammenarbeit \"Gesund vor Ort\" (GSR) und BildungsLokal (RBS) im Handlungsfeld Gesundheitsbildung\",\n",
+    "        \"1) Beschreibe Dein konkretes Beispiel.\":\"Durch die gute Zusammenarbeit zwischen GvO (GSR) und dem lokalen Bildungsmanagement (LHM/RBS) könne und konnten Synergien im Bereich Gesundheitsbildung und -förderung erreicht werden. Die \"Einflussbereiche\" werden abgestimmt, damit keine Parallelangebote entstehen. Gemeinsam weredn auch neue, bedarfsbezogene Angebote geschaffen ( z.B. Modellprojekt \"Gesundheitstag\")\",\n",
+    "        \"2) Was läuft gut oder schlecht?\":\"Gut: - gemeinsame Koordination bzw. Abgrenzung ja nach Zielgruppe und Bedarf - Möglichkeit Synergien zu schaffen, z.B durch gemeinsame Finanzierung von Projekten - Bündelung der Expertise bzgl. der Zielgruppen -> Qualität der Angebote steigt\",\n",
+    "        \"3) Woran liegt es, dass es so läuft?\":\"- Personal, Ressourcen - Offenheit für Kooperation, kein Kokurrenzgefühl - die guten Seiten sind in diesem Fall auch maßgeblich persönlich bedingt - je nach Person könnte man sich bspw. Auch stärker als Kokurrenten sehen, das ist aber nicht der Fall\",\n",
+    "    },\n",
+    "    \"Insight\": \"Die Zusammenarbeit zwischen \"Gesund vor Ort\" (GSR) und dem lokalen Bildungsmanagement in der Gesundheitsbildung- und förderung funktioniert gut WEIL beide Seiten offen für Kooperation sind, Projekte gemeinsam finanziert, koordiniert und Expertisen gebündelt werden DESHALB steigt die Qualität der Angebote.\"\n",
+    "}\n",
+    "Beispiel: Insights für das 2. Tupel: {\n",
+    "    \"2. Tupel\": {\n",
+    "        \"Titel des Beispiels\":\"Bildungsgerechtigkeit / Chancengleichheit\",\n",
+    "        \"1) Beschreibe Dein konkretes Beispiel.\":\"Es geht um den Übertritt der Schüler aus der 4. GS-Klasse in eine weiterführende Schule, vorrangig in ein Gymnasium im 24. Stadtbezirk. Trotz Vorliegen des Übertritts-Zeugnisses werden diese Kinder benachteiligt, sie müssen einen längeren Schulweg in ein Gymnasium außerhalb des Stadtbezirks in Kauf nehmen. Oder wählen dann als \"Ausweg\" einen Übertritt in eine Realschule\",\n",
+    "        \"2) Was läuft gut oder schlecht?\":\"Kinder aus Famlien mit Migrationshintergrund haben eine geringere Chance auf einen Platz in einem Gymnasium. Chancengleichheit ist oft davon abhängig, in welches Elternhaus ein Kind geboren wird. Das darf nicht sein. Die soziale Herkunft darf kein Nachteil für KInder sein, das Wohnviertel keine Rolle spielen.\",\n",
+    "        \"3) Woran liegt es, dass es so läuft?\":\"Es gibt im Münchner Norden zu wenig Gymnasien. Eltern, die der dt. Sprache nicht so mächtig sind haben Probleme die formellen Notwendigkeiten zu erledigen. Der Neubau von Schulen erfolgt viel zu langsam. Anhand der Bauvorhaben im Wohnunsgsbau ist der Zuwachs der Einwohner und damit der Bedarf an Schulen zu berücksichtigen und zu realisieren.\",\n",
+    "    },\n",
+    "    \"Insight\": \"Trotz Vorliegen des Übertritts-Zeugnisses haben Kinder aus Familien mit Migrationshintergrund eine geringere Chance auf einen Gymnasiums-Platz WEIL es im Münchner Norden zu wenig Gymnasien gibt UND Sprachbarrieren der Eltern eine Barriere bei formellen Notwendigkeiten darstellen.\"\n",
+    "}\n",
     "\n",
+    "Prüfe das Insight für das 1. Tupel Schritt für Schritt und gebe deine finale Antwort im folgenden JSON Format aus: {\n",
+    "    \"Tupel\": <Nummer>,\n",
+    "    \"Regel 1\": <Schulnote>,\n",
+    "    \"Regel 2\": <Schulnote>,\n",
+    "    \"Regel 3\": <Schulnote>,\n",
+    "    \"Regel 4\": <Schulnote>,\n",
+    "    \"Regel 5\": <Schulnote>,\n",
+    "    \"Begründung\" <Begründung der Benotung>,\n",
+    "    \"Insight\": <Verbesserter Insight>,\n",
+    "}\n",
+    "1. Kontrolliere ob alle 5 Regeln eingehalten wurden und vergebe pro Regel eine Schulnote zwischen 1 und 6.\n",
+    "2. Begründe deine Benotung zusammenfassend in 1 Satz.\n",
+    "3. Verbessere den Insight. Wende dazu Regel 2 an.\n",
+    "4. Verbessere den Insight. Wende dazu Regel 3 an.\n",
+    "5. Verbessere den Insight. Wende dazu Regel 4 an.\n",
+    "6. Verbessere den Insight. Wende dazu Regel 5 an.\n",
     "\"\"\"\n",
     "\n",
+    "# TODO Prompt optimieren + Doku anpassen (Tupel 1, 6, 8, 45, 100 überprüfen und Antworten einfügen)\n",
+    "\n",
     "# GPT:\n",
-    "#\n",
-    "#\n",
-    "#"
+    "# {\n",
+    "#     \"Tupel\": 1,\n",
+    "#     \"Regel 1\": 2,\n",
+    "#     \"Regel 2\": 3,\n",
+    "#     \"Regel 3\": 3,\n",
+    "#     \"Regel 4\": 2,\n",
+    "#     \"Regel 5\": 3,\n",
+    "#     \"Begründung\": \"Das Insight bezieht sich auf relevante Inhalte, könnte jedoch konkreter auf Herausforderungen und Chancen eingehen, \n",
+    "#                    detaillierter sein und präziser formuliert werden.\",\n",
+    "#     \"Insight\": \"Kinder in belasteten Stadtteilen erhalten oft keinen Zugang zu sprachlicher Förderung, da der Bedarf an Vorkurs-Plätzen das Angebot übersteigt \n",
+    "#                 UND Eltern mehr Unterstützung benötigen, um ihre Kinder zu den Kursen zu bringen.\"\n",
+    "# }\n",
+    "#B\n",
+    "# {\n",
+    "#     \"Tupel\": 3,\n",
+    "#     \"Regel 1\": 2,\n",
+    "#     \"Regel 2\": 1,\n",
+    "#     \"Regel 3\": 2,\n",
+    "#     \"Regel 4\": 1,\n",
+    "#     \"Regel 5\": 2,\n",
+    "#     \"Begründung\": \"Der Insight konzentriert sich gut auf eine Herausforderung, sollte jedoch alle Aspekte des Beispiels \n",
+    "#                    abdecken und detaillierter auf spezifische Ursachen eingehen.\",\n",
+    "#     \"Insight\": \"An meiner Berufsschule wird empfohlen, 5 Minuten 'Bürogymnastik' und Obstangebote im Unterricht zu integrieren, \n",
+    "#                 ABER die Lehrkräfte möchten keine Unterrichtszeit dafür opfern, da sie befürchten, dies könnte sich negativ auf ihren Lehrplan auswirken.\"\n",
+    "# }\n",
+    "#\n"
    ]
   },
   {
@@ -171,7 +308,7 @@
    "outputs": [],
    "source": [
     "guc2_kategorie_insights = \"\"\"\n",
-    "Fokusiere dich bei deiner Analyse darauf, dass dein Ergebnis alle Daten beinhaltet.\n",
+    "Fokusiere dich bei deiner Analyse darauf, dass dein Ergebnis alle Daten beinhalten.\n",
     "Bearbeite dazu folgende Aufgabe Schritt für Schritt und generiere deine fertige Analyse lückenlos im JSON Format mit folgender Struktur:\n",
     "{\n",
     "    \"Datei\": <Dateiname>,\n",
