--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GUC2 – Insights generieren\n",
+    "# GUC2 – Key Insights\n",
     "\n",
     "- Antworten generiert mit fine-funed GPT-4 \"Data Analysis\" via ChatGPT.\n",
     "- Beispielhaft an der Datei Regionalwerkstatt_Nord\n",
@@ -130,7 +130,7 @@
     "i) Für einen Insight ist ausschließlich der Inhalt einer Zeile (Tupel) in den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\" relevant.\n",
     "ii) Ein Insight konzentriert sich auf konkrete Herausforderungen und konkrete Chancen.\n",
     "iii) Es ist wichtig spezifische Details und Ursachen zu benennen, um den Insight aussagekräftig zu gestalten.\n",
-    "iv) Insights müssen wie folgt strukturiert sein: \"<A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <B> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <C>\". <B> und <C> sind optional. \n",
+    "iv) Insights müssen wie folgt strukturiert sein: \"<A> + [WEIL, UND, ABER, DESWEGEN, DARUM, INDEM, DAMIT, UM, DENNOCH, DADURCH] + <B> + [WEIL, UND, ABER, DESWEGEN, DARUM, INDEM, DAMIT, UM, DENNOCH, DADURCH] + <C>\". <B> und <C> sind optional. \n",
     "v) Insights werden präzise und prägnant in 20-45 Wörter formuliert.\n",
     "\n",
     "Beispiel: Insight für das 4. Tupel: {\n",
@@ -163,9 +163,6 @@
     "5. Verbessere den Insight. Wende dazu Regel 5 an.\n",
     "6. Kontrolliere ob alle 5 Regeln eingehalten wurden und finalisiere den Insight.\n",
     "\"\"\"\n",
-    "\n",
-    "# ## OUTPUT\n",
-    "# https://chat.openai.com/g/g-HMNcP6w7d-data-analysis/c/28156a7f-fedf-4f07-b97d-4960dc5dfc70\n",
     "\n",
     "# GPT:\n",
     "# {\n",
@@ -227,10 +224,10 @@
     "guc2_insights_review = \"\"\"\n",
     "Deine Aufgabe besteht darin sogenannte Insights zu prüfen.\n",
     "Fokusiere dich bei der Prüfung von Insights auf die folgenden 5 Regeln:\n",
-    "i) Für einen Insight ist ausschließlich der Inhalt einer Zeile (Tupel) in den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\" relevant.\n",
+    "i) Einen Insight in Spalte \"Insight\" umfasst ausschließlich den zugehörigen Inhalt (Tupel) der selben Zeile in den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\".\n",
     "ii) Ein Insight konzentriert sich auf konkrete Herausforderungen und konkrete Chancen.\n",
     "iii) Es ist wichtig spezifische Details und Ursachen zu benennen, um den Insight aussagekräftig zu gestalten.\n",
-    "iv) Insights müssen wie folgt strukturiert sein: \"<A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <B> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <C>\". <B> und <C> sind optional. \n",
+    "iv) Insights müssen wie folgt strukturiert sein: \"<A> + [WEIL, UND, ABER, DESWEGEN, DARUM, INDEM, DAMIT, UM, DENNOCH, DADURCH] + <B> + [WEIL, UND, ABER, DESWEGEN, DARUM, INDEM, DAMIT, UM, DENNOCH, DADURCH] + <C>\". <B> und <C> sind optional. \n",
     "v) Insights werden präzise und prägnant in 20-45 Wörter formuliert.\n",
     "\n",
     "Beispiel: Insight für das 4. Tupel: {\n",
@@ -260,45 +257,95 @@
     "    \"Regel 4\": <Schulnote>,\n",
     "    \"Regel 5\": <Schulnote>,\n",
     "    \"Begründung\" <Begründung der Benotung>,\n",
-    "    \"Insight\": <Verbesserter Insight>,\n",
+    "    \"Vorschlag\": <Verbesserter Insight>,\n",
     "}\n",
-    "1. Kontrolliere ob alle 5 Regeln eingehalten wurden und vergebe pro Regel eine Schulnote zwischen 1 und 6.\n",
-    "2. Begründe deine Benotung zusammenfassend in 1 Satz.\n",
-    "3. Verbessere den Insight. Wende dazu Regel 2 an.\n",
-    "4. Verbessere den Insight. Wende dazu Regel 3 an.\n",
-    "5. Verbessere den Insight. Wende dazu Regel 4 an.\n",
-    "6. Verbessere den Insight. Wende dazu Regel 5 an.\n",
+    "1. Kontrolliere ob alle 5 Regeln eingehalten wurden und vergebe pro Regel eine Schulnote zwischen 1 und 6 und update entsprechend das JSON.\n",
+    "2. Begründe deine Benotung zusammenfassend in 1 Satz und update entsprechend das JSON.\n",
+    "3. Verbessere den Insight. Wende dazu Regel 2 an und update entsprechend das JSON.\n",
+    "4. Verbessere den Insight. Wende dazu Regel 3 an und update entsprechend das JSON.\n",
+    "5. Verbessere den Insight. Wende dazu Regel 4 an und update entsprechend das JSON.\n",
+    "6. Verbessere den Insight. Wende dazu Regel 5 an und update entsprechend das JSON.\n",
     "\"\"\"\n",
-    "\n",
-    "# TODO Prompt optimieren + Doku anpassen (Tupel 1, 6, 8, 45, 100 überprüfen und Antworten einfügen)\n",
     "\n",
     "# GPT:\n",
     "# {\n",
     "#     \"Tupel\": 1,\n",
-    "#     \"Regel 1\": 2,\n",
+    "#     \"Regel 1\": 1,\n",
+    "#     \"Regel 2\": 2,\n",
+    "#     \"Regel 3\": 3,\n",
+    "#     \"Regel 4\": 3,\n",
+    "#     \"Regel 5\": 2,\n",
+    "#     \"Begründung\": \"Der Insight ist präzise und bezieht sich auf das Tupel, aber er könnte spezifischere Ursachen nennen und eine klarere Struktur aufweisen.\",\n",
+    "#     \"Vorschlag\": \"Kinder in belasteten Stadtteilen erhalten oft keinen Zugang zu sprachlicher Förderung \n",
+    "#                   WEIL es einen Fachkräftemangel im Bereich der Vorkurse gibt \n",
+    "#                   UND die Eltern bei der Hol- und Bringsituation mehr unterstützt werden müssen, \n",
+    "#                   DESWEGEN bleibt vielen Kindern notwendige sprachliche Bildung verwehrt, die grundlegend für ihre weitere Entwicklung ist.\"\n",
+    "# }\n",
+    "\n",
+    "# USER:\n",
+    "# Prüfe das Insight für das 6. Tupel Schritt für Schritt.\n",
+    "\n",
+    "# GPT:\n",
+    "# {\n",
+    "#     \"Tupel\": 6,\n",
+    "#     \"Regel 1\": 1,\n",
+    "#     \"Regel 2\": 2,\n",
+    "#     \"Regel 3\": 3,\n",
+    "#     \"Regel 4\": 2,\n",
+    "#     \"Regel 5\": 2,\n",
+    "#     \"Begründung\": \"Der Insight ist gut strukturiert und adressiert konkrete positive Aspekte des Projekts, könnte aber von einer detaillierteren Ausarbeitung spezifischer Ursachen profitieren.\",\n",
+    "#     \"Vorschlag\": \"Im Münchner Haus der Schüler*innen wird Demokratie und Solidarität erfolgreich gelebt, \n",
+    "#                   WEIL den jungen Erwachsenen Verantwortung übertragen und ihnen Vertrauen geschenkt wird, was zu einem positiven Miteinander und einer produktiven Arbeitsatmosphäre führt.\"\n",
+    "# }\n",
+    "\n",
+    "# USER:\n",
+    "# Prüfe das Insight für das 8. Tupel Schritt für Schritt.\n",
+    "\n",
+    "# GPT:\n",
+    "# {\n",
+    "#     \"Tupel\": 8,\n",
+    "#     \"Regel 1\": 1,\n",
     "#     \"Regel 2\": 3,\n",
     "#     \"Regel 3\": 3,\n",
     "#     \"Regel 4\": 2,\n",
-    "#     \"Regel 5\": 3,\n",
-    "#     \"Begründung\": \"Das Insight bezieht sich auf relevante Inhalte, könnte jedoch konkreter auf Herausforderungen und Chancen eingehen, \n",
-    "#                    detaillierter sein und präziser formuliert werden.\",\n",
-    "#     \"Insight\": \"Kinder in belasteten Stadtteilen erhalten oft keinen Zugang zu sprachlicher Förderung, da der Bedarf an Vorkurs-Plätzen das Angebot übersteigt \n",
-    "#                 UND Eltern mehr Unterstützung benötigen, um ihre Kinder zu den Kursen zu bringen.\"\n",
-    "# }\n",
-    "#B\n",
-    "# {\n",
-    "#     \"Tupel\": 3,\n",
-    "#     \"Regel 1\": 2,\n",
-    "#     \"Regel 2\": 1,\n",
-    "#     \"Regel 3\": 2,\n",
-    "#     \"Regel 4\": 1,\n",
     "#     \"Regel 5\": 2,\n",
-    "#     \"Begründung\": \"Der Insight konzentriert sich gut auf eine Herausforderung, sollte jedoch alle Aspekte des Beispiels \n",
-    "#                    abdecken und detaillierter auf spezifische Ursachen eingehen.\",\n",
-    "#     \"Insight\": \"An meiner Berufsschule wird empfohlen, 5 Minuten 'Bürogymnastik' und Obstangebote im Unterricht zu integrieren, \n",
-    "#                 ABER die Lehrkräfte möchten keine Unterrichtszeit dafür opfern, da sie befürchten, dies könnte sich negativ auf ihren Lehrplan auswirken.\"\n",
+    "#     \"Begründung\": \"Der Insight ist gut strukturiert und bezieht sich auf das Tupel, könnte jedoch konkrete Herausforderungen besser hervorheben und von einer detaillierteren Ursachenanalyse profitieren.\",\n",
+    "#     \"Vorschlag\": \"Der LMU-Kochwagen, entwickelt in Kooperation mit dem RBS-Geschäftsbereich Allgemeinbildende Schulen und Lehrkräften, ermöglicht Schulen, Theorie und Praxis in der Ernährungsbildung zu verbinden,\n",
+    "#                   INDEM er ausgeliehen oder finanziert wird, was zu einer verbesserten Ernährungskompetenz der Schüler führt.\"\n",
     "# }\n",
-    "#\n"
+    "\n",
+    "# USER:\n",
+    "# Prüfe das Insight für das 45. Tupel Schritt für Schritt.\n",
+    "\n",
+    "# GPT:\n",
+    "# {\n",
+    "#     \"Tupel\": 45,\n",
+    "#     \"Regel 1\": 1,\n",
+    "#     \"Regel 2\": 3,\n",
+    "#     \"Regel 3\": 3,\n",
+    "#     \"Regel 4\": 2,\n",
+    "#     \"Regel 5\": 2,\n",
+    "#     \"Begründung\": \"Der Insight ist gut strukturiert und adressiert wichtige Herausforderungen des BVJ, könnte jedoch konkrete Chancen besser hervorheben und von einer detaillierteren Ursachenanalyse profitieren.\",\n",
+    "#     \"Vorschlag\": \"Im BVJ wird der Schwerpunkt zu stark auf die Schulpflicht gelegt, während psycho-soziale Themen vernachlässigt werden, \n",
+    "#                   WEIL eine kooperative Zusammenarbeit zwischen RBS, Sozial- und Gesundheitsreferat fehlt, was durch stärkere Einbindung erfahrener Träger und Schulen verbessert werden könnte.\"\n",
+    "# }\n",
+    "\n",
+    "# USER:\n",
+    "# Prüfe das Insight für das 100. Tupel Schritt für Schritt.\n",
+    "\n",
+    "# GPT:\n",
+    "# {\n",
+    "#     \"Tupel\": 100,\n",
+    "#     \"Regel 1\": 1,\n",
+    "#     \"Regel 2\": 2,\n",
+    "#     \"Regel 3\": 3,\n",
+    "#     \"Regel 4\": 2,\n",
+    "#     \"Regel 5\": 3,\n",
+    "#     \"Begründung\": \"Der Insight thematisiert wichtige Aspekte des KiTZ-Ansatzes, könnte jedoch von einer detaillierteren Ursachenanalyse profitieren und sollte kürzer formuliert werden, um im empfohlenen Wortbereich zu bleiben.\",\n",
+    "#     \"Vorschlag\": \"KiTas werden zu KiTZ umgewandelt, \n",
+    "#                   UM Familien besser zu integrieren und individuelle Unterstützung anzubieten, \n",
+    "#                   ABER die Umsetzung ist begrenzt durch Stadtratsbeschlüsse und spezifische Kriterien, was den KiTZ-Status einschränkt.\"\n",
+    "# }"
    ]
   },
   {
@@ -308,7 +355,7 @@
    "outputs": [],
    "source": [
     "guc2_kategorie_insights = \"\"\"\n",
-    "Fokusiere dich bei deiner Analyse darauf, dass dein Ergebnis alle Daten beinhalten.\n",
+    "Fokusiere dich bei deiner Analyse darauf, dass dein Ergebnis alle Daten beinhaltet.\n",
     "Bearbeite dazu folgende Aufgabe Schritt für Schritt und generiere deine fertige Analyse lückenlos im JSON Format mit folgender Struktur:\n",
     "{\n",
     "    \"Datei\": <Dateiname>,\n",
