--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -156,12 +156,12 @@
     "    \"Tupel\": <Nummer>,\n",
     "    \"Insight\": <Insight>\n",
     "}\n",
-    "1. Erstelle den Insight. Wende dazu Regel 1 an.\n",
-    "2. Verbessere den Insight. Wende dazu Regel 2 an.\n",
-    "3. Verbessere den Insight. Wende dazu Regel 3 an.\n",
-    "4. Verbessere den Insight. Wende dazu Regel 4 an.\n",
-    "5. Verbessere den Insight. Wende dazu Regel 5 an.\n",
-    "6. Kontrolliere ob alle 5 Regeln eingehalten wurden und finalisiere den Insight.\n",
+    "1. Erstelle den Insight. Wende dazu Regel 1 an und update entsprechend das JSON.\n",
+    "2. Verbessere den Insight. Wende dazu Regel 2 an und update entsprechend das JSON.\n",
+    "3. Verbessere den Insight. Wende dazu Regel 3 an und update entsprechend das JSON.\n",
+    "4. Verbessere den Insight. Wende dazu Regel 4 an und update entsprechend das JSON.\n",
+    "5. Verbessere den Insight. Wende dazu Regel 5 an und update entsprechend das JSON.\n",
+    "6. Kontrolliere ob alle 5 Regeln eingehalten wurden und finalisiere den Insight und update entsprechend das JSON.\n",
     "\"\"\"\n",
     "\n",
     "# GPT:\n",
