--- a/notebooks/guc4.ipynb
+++ b/notebooks/guc4.ipynb
@@ -10,11 +10,13 @@
     "2. Häufigkeitsverteilung Fragen/Ideen.\n",
     "3. Thematische Schwerpunkte (Fragen nach Thema gruppieren).\n",
     "\n",
-    "=> Anzahl, Verteilung und Häufigkeiten wurden in GUC1 schon ausführlich behandelt.\n",
+    "=> (1-3) Anzahl, Verteilung und Häufigkeiten wurden in GUC1 schon ausführlich behandelt.\n",
     "\n",
     "4. Potential Analyse (Sortieren nach Häufigkeit Fragen).\n",
     "5. Insights VS Ideen -> Welche Herausforderung/Chance bleiben durch die Ideen ungelöst?\n",
-    "6. Insights VS Ideen -> Welche Herausforderung/Chance werden durch die Ideen gelöst?"
+    "6. Insights VS Ideen -> Welche Herausforderung/Chance werden durch die Ideen gelöst?\n",
+    "\n",
+    "=> (4-6) Wurde nicht mehr Umgesetzt."
    ]
   },
   {
