--- a/notebooks/guc1.ipynb
+++ b/notebooks/guc1.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prompts: Verteilung"
+    "## Prompts"
    ]
   },
   {
@@ -134,6 +134,49 @@
     "# }\n",
     "#\n",
     "# analysis_json, number_of_entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional für weitere Analyse-Ideen\n",
+    "guc1_was_analysieren = \"\"\"\n",
+    "Was wäre besonders spannend zu analysieren basierend auf den vorliegenden Daten aus der Regionalwerkstatt Nord?\n",
+    "Liste 5 Vorschläge auf.\n",
+    "\"\"\"\n",
+    "\n",
+    "# GPT:\n",
+    "# 1. Trendanalyse in den Kategorien: Untersuchen Sie die Hauptthemen innerhalb jeder Kategorie wie \"Bildungsinhalte\", \n",
+    "# \"Bildungsorte\", \"Bildungsgerechtigkeit\" und \"Digitalisierung\". Identifizieren Sie spezifische Muster oder häufig \n",
+    "# erwähnte Themen, die in den Beispielen oder Antworten vorkommen.\n",
+    "#\n",
+    "# 2. Korrelation zwischen Altersgruppen und Bildungsthemen: Analysieren Sie, wie verschiedene Altersgruppen \n",
+    "# (z.B. \"Frühe Kindheit\", \"Kindheit und Jugendalter\", \"Jugend und Erwachsenenalter\") unterschiedliche Themen oder \n",
+    "# Herausforderungen in der Bildung sehen. Dies könnte aufschlussreiche Einsichten in altersspezifische Bedürfnisse \n",
+    "# oder Perspektiven in der Bildungslandschaft liefern.\n",
+    "#\n",
+    "# 3. Rollenbasierte Perspektivenanalyse: Betrachten Sie, wie unterschiedliche Rollen (z.B. Schüler, Lehrer, Verwaltungsmitarbeiter)\n",
+    "# verschiedene Aspekte des Bildungssystems sehen. Dies könnte dazu beitragen, ein vielschichtiges Verständnis davon zu entwickeln, \n",
+    "# wie verschiedene Stakeholder die Bildungslandschaft erleben.\n",
+    "#\n",
+    "# 4. Geografische Analyse der Bildungsthemen: Untersuchen Sie, ob und wie die Bildungsthemen und Herausforderungen mit der \n",
+    "# geografischen Lage innerhalb Münchens (in diesem Fall der Norden) korrelieren. Dies könnte Einblicke in regionale Unterschiede \n",
+    "# oder spezifische Bedürfnisse bestimmter Stadtgebiete geben.\n",
+    "#\n",
+    "# 5. Auswirkungen von Digitalisierung auf Bildung: Da Digitalisierung eine der Hauptkategorien ist, könnte eine tiefere \n",
+    "# Analyse darüber, wie digitale Technologien das Bildungswesen beeinflussen, besonders aufschlussreich sein. Untersuchen Sie, \n",
+    "# welche spezifischen digitalen Initiativen oder Herausforderungen erwähnt werden, und bewerten Sie ihre Bedeutung für die Zukunft\n",
+    "# der Bildung in München."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trendanalyse / Verteilungen"
    ]
   },
   {
@@ -494,19 +537,6 @@
    "metadata": {},
    "source": [
     "## Prompts: Stimmung & Zusammenhänge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Optional für weitere Analyse-Ideen\n",
-    "guc1_was_analysieren = \"\"\"\n",
-    "Was wäre besonders spannend zu analysieren basierend auf den vorliegenden Daten aus der Regionalwerkstatt Nord?\n",
-    "Liste 5 Vorschläge auf.\n",
-    "\"\"\""
    ]
   },
   {
