--- a/notebooks/guc1.ipynb
+++ b/notebooks/guc1.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prompts"
+    "## Prompts: Kontext"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trendanalyse / Verteilungen"
+    "## Prompts: Trendanalyse / Verteilungen"
    ]
   },
   {
