--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prompts: Kontext"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -115,6 +122,13 @@
     "# # Konvertieren des JSON-Objekts in einen String zur Anzeige\n",
     "# json_string = json.dumps(json_output, ensure_ascii=False, indent=4)\n",
     "# json_string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prompts: Generierung"
    ]
   },
   {
