--- a/notebooks/guc4.ipynb
+++ b/notebooks/guc4.ipynb
@@ -16,7 +16,7 @@
     "5. Insights VS Ideen -> Welche Herausforderung/Chance bleiben durch die Ideen ungelöst?\n",
     "6. Insights VS Ideen -> Welche Herausforderung/Chance werden durch die Ideen gelöst?\n",
     "\n",
-    "=> (4-6) Wurde nicht mehr Umgesetzt."
+    "=> (4-6) Wurde nicht mehr umgesetzt."
    ]
   },
   {
